--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="prose">
+	<body data-sveltekit-preload-data="hover" class="prose max-w-full">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
