--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="en" class="dark bg-background">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="prose max-w-full">
+	<body data-sveltekit-preload-data="hover" class="prose prose-invert max-w-full bg-background">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
