--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,7 @@
 <html lang="en" class="dark bg-background">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="%sveltekit.assets%/greenmotion.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
